development/thelounge/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: lounge-irc
  namespace: lounge-irc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lounge-irc
      run: lounge-irc
  strategy: {}
  template:
    metadata:
      labels:
        app: lounge-irc
        run: lounge-irc
        target: frontend
    spec:
      containers:
        - image: thelounge/thelounge:4.2.0-alpine
          name: lounge-irc
          resources:
            requests:
              memory: "100Mi"
              cpu: "0.1"
            limits:
              memory: "200Mi"
              cpu: "0.2"
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: /var/opt/thelounge/
              name: log
      volumes:
        - name: log
          persistentVolumeClaim:
            claimName: lounge-volume-claim
